--- a/WebForms_Example/Web.config
+++ b/WebForms_Example/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DatabaseEntities" connectionString="metadata=res://*/App_Code.PeopleDB.csdl|res://*/App_Code.PeopleDB.ssdl|res://*/App_Code.PeopleDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\downloads\WebForms_Example\App_Data\Database.mdf;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DatabaseEntities" connectionString="metadata=res://*/App_Code.PeopleDB.csdl|res://*/App_Code.PeopleDB.ssdl|res://*/App_Code.PeopleDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\git\WebForms_Example\WebForms_Example\App_Data\Database.mdf;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
